--- a/README.org
+++ b/README.org
@@ -8,6 +8,7 @@ AnderSon
 
   [[./app/controllers]]
   [[./Gemfile]]
+  [[./.env]]
   [[./config/environments]]
   [[./config/initializers]]
   [[./app/models]]
