--- a/README.org
+++ b/README.org
@@ -10,6 +10,7 @@ AnderSon
   [[./app/models]]
   [[./app/helpers]]
   [[./app/views]]
+  [[./app/assets/stylesheets]]
   [[./Gemfile]]
   [[./.gitignore]]
   [[./.env]]
