--- a/README.org
+++ b/README.org
@@ -2,6 +2,8 @@ AlexAnder weBJOURNal application
 re=>render 2015
 AnderSon
 
+
+
 * Blog
 
 ** Files
@@ -31,4 +33,67 @@ AnderSon
    - [ ] image upload
 
 
+
+
+* Angular Implementation
+
+  https://bendyworks.com/angularjs-rails-donuts/
+
+** Rails Assets
+
+   converts Bower packages into Bundler gems that slot into your Gemfile
+
+   [[./Gemfile]]
+   
+   : source 'https://rails-assets.org' do
+   :   gem 'rails-assets-angular-ui-grid'
+   :   gem 'rails-assets-restangular'
+   :   # Additional rails-assets gems go here...
+   : end
+
+   [[./app/assets/javascripts/application.js]]
+
+   : //= require angular
+   : //= require lodash
+   : //= require angular-ui-grid
+   : //= require restangular
+
+   [[./app/assets/stylesheets/application.scss]]
+
+   : *= require angular-ui-grid
+
+   before or after 'require_tree .' and 'require_self' ?
+** Displaying the AngularJS App in the Rails View
+
+   [[./app/views/logs/index.html.erb]]
+
+   : <div ng-app='logApp'>
+   :   <div ng-controller='indexController'>
+   :     <div ui-grid='gridOptions' class='logGrid'>
+   :     </div>
+   :   </div>
+   : </div>
+
+   Turbolinks creates problems for embedded js, so turn it off
+
+   [[./app/views/layouts/application.html.erb]]
+
+   : <body data-no-turbolink>
+
+** Database Schema
+
+*** Using Restangular to call the API
+
+    [[./app/assets/javascripts/logs.js]]
+
+    : //RESTANGULAR
+    : Restangular.all('logs').getList().then(function(logs) {
+    :     $scope.gridOptions.data = _.map(logs, function(l) {
+    :         return {
+    :             title: l.title,
+    :             entry: l.entry,
+    :             tags: l.tags
+    :         };
+    :     });
+    : });
 
